[package]
name = "bf-llvm"
version = "0.1.0"
authors = ["Jack LeFevre <jackflef@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0"
llvm-sys = "100.2.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }